# cpp-opencv

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  main.cpp
results/: output_image2.tiff
src/: example_19-01.cpp  sift-opencv.cpp  template_matching.cpp  template_matching2.cpp  video_capture_live_camera.cpp
src/TrackingMotion/: cornerDetector_Demo.cpp  cornerHarris_Demo.cpp  cornerSubPix_Demo.cpp  goodFeaturesToTrack_Demo.cpp
